--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://i.postimg.cc/Mpb4s404/download-6.png" />
+    <link rel="icon" type="image/png" href="https://i.postimg.cc/6QNgk3M1/art.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home - Artist</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
@@ -12,3 +12,4 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
